--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ People here are die hard fans of srinvas</p>
 <li> <p><img src="sahith.jpg" width="100" height="100"></p><pre><b>President :</b> V.Sahith reddy    <b>Contact :</b> +916302012175</pre> </li>
 <li><p><img src="sai.jpg" width="100" height="100"></p><pre><b>Vice President :</b> T.Sai Kumar    <b>Contact :</b> +919000640853</pre> </li>
 <li> <p><img src="ghan.jpg" width="100" height="100"></p><pre><b>Chancellor :</b> V.Ghanshyam    <b>Contact :</b> +919014492969</pre> </li>
-<li><p><img src="suda.jpg" width="100" height="100"></p><pre><b>Vice President :</b> Sudharshan    <b>Contact :</b> +918008184209</pre> </li>
+<li><p><img src="suda.jpg" width="100" height="100"></p><pre><b>Vice Chancellor :</b> Sudharshan    <b>Contact :</b> +918008184209</pre> </li>
 </ol>
 </body>
 </html>
