--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@ People here are die hard fans of srinvas</p>
 <li> <p><img src="ghan.jpg" width="100" height="100"></p><pre><b>Chancellor :</b> V.Ghanshyam    <b>Contact :</b> +919014492969</pre> </li>
 <li><p><img src="suda.jpg" width="100" height="100"></p><pre><b>Vice Chancellor :</b> Sudharshan    <b>Contact :</b> +918008184209</pre> </li>
 </ol>
+</div>
+<div align="center">
+  <p>Website still under construction</p>
+</div>
 </body>
 </html>
 
