--- a/index.html
+++ b/index.html
@@ -1,35 +1,155 @@
+<!DOCTYPE html>
 <html dir="ltr">
-<body>
-<head>
-<title>fans</title>
-</head>
-<body>
-<div align="center">
-<h1>ONLY SRINIVAS FANS</h1>
-</div>
-<div align="center">
-<h2><u>About</u></h2>
-<p>This page is totally dedicated to srinivas fans.
-People here are die hard fans of srinvas</p>
-<p>We request girls to stay away from this website as this website is only for srinivas fans.</p>
-<p>Only vadina is allowed to visit this page.</p>
-</div>
-</div>
-<div align="center">
-<img src="srinu.jpg" width="350" height="300">
-</div>
-<div align="center">
-<h2>Fans Association members:</h2>
-<ol type="1" text-align="center">
-<li> <p><img src="sahith.jpg" width="100" height="100"></p><pre><b>President :</b> V.Sahith reddy    <b>Contact :</b> +916302012175</pre> </li>
-<li><p><img src="sai.jpg" width="100" height="100"></p><pre><b>Vice President :</b> T.Sai Kumar    <b>Contact :</b> +919000640853</pre> </li>
-<li> <p><img src="ghan.jpg" width="100" height="100"></p><pre><b>Chancellor :</b> V.Ghanshyam    <b>Contact :</b> +919014492969</pre> </li>
-<li><p><img src="suda.jpg" width="100" height="100"></p><pre><b>Vice Chancellor :</b> Sudharshan    <b>Contact :</b> +918008184209</pre> </li>
-</ol>
-</div>
-<div align="center">
-  <p>Website still under construction</p>
-</div>
-</body>
-</html>
 
+<head>
+  <title>fans</title>
+  <style>
+    body {
+      max-width: 70%;
+      margin: 0 auto;
+      font-family: Arial, sans-serif;
+      background-image: url("background.jpg");
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+
+    .container {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
+
+    .content {
+      width: 100%;
+    }
+
+    .form-container {
+      width: 30%;
+      background-color: #f2f2f2;
+      padding: 20px;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+      color: #333;
+    }
+
+    p {
+      color: #555;
+    }
+
+    form {
+      margin-top: 20px;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 5px;
+    }
+
+    input[type="text"],
+    input[type="tel"],
+    select {
+      width: 100%;
+      padding: 8px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    input[type="range"] {
+      width: 100%;
+    }
+
+    input[type="submit"] {
+      background-color: #4CAF50;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    input[type="submit"]:hover {
+      background-color: #45a049;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <div class="content">
+      <div align="center">
+        <h1>ONLY SRINIVAS FANS</h1>
+      </div>
+      <div align="center">
+        <h2><u>About</u></h2>
+        <p>This page is totally dedicated to Srinivas fans.
+          People here are die-hard fans of Srinivas.</p>
+        <p>We request girls to stay away from this website as this website is only for Srinivas fans.</p>
+        <p>Only vadina is allowed to visit this page.</p>
+      </div>
+      <div align="center">
+        <img src="srinu.jpg" width="350" height="300">
+      </div>
+      <div align="center">
+        <h2>Fans Association members:</h2>
+        <ol type="1" text-align="center">
+          <li>
+            <p><img src="sahith.jpg" width="100" height="100"></p>
+            <pre><b>President :</b> V.Sahith reddy    <b>Contact :</b> +916302012175</pre>
+          </li>
+          <li>
+            <p><img src="sai.jpg" width="100" height="100"></p>
+            <pre><b>Vice President :</b> T.Sai Kumar        <b>Contact :</b> +919000640853</pre>
+          </li>
+          <li>
+            <p><img src="ghan.jpg" width="100" height="100"></p>
+            <pre><b>Chancellor :</b> V.Ghanshyam        <b>Contact :</b> +919014492969</pre>
+          </li>
+          <li>
+            <p><img src="suda.jpg" width="100" height="100"></p>
+            <pre><b>Vice Chancellor :</b> Sudharshan    <b>Contact :</b> +918008184209</pre>
+          </li>
+          <li>
+            <p><img src="praveen.jpg" width="100" height="100"></p>
+            <pre><b>Die-hard fan 1:</b> S.Praveen    <b>Contact :</b> +918328482198</pre>
+          </li>
+        </ol>
+      </div>
+      <div align="center">
+        <p>Website still under construction</p>
+      </div>
+    </div>
+
+    <div class="form-container">
+      <form>
+        <h2>Blood Donation Form</h2>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required><br><br>
+
+        <label for="phone">Phone Number:</label>
+        <input type="tel" id="phone" name="phone" required><br><br>
+
+        <label for="blood-type">Blood Type:</label>
+        <select id="blood-type" name="blood-type" required>
+          <option value="">Select Blood Type</option>
+          <option value="A+">A+</option>
+          <option value="A-">A-</option>
+          <option value="B+">B+</option>
+          <option value="B-">B-</option>
+          <option value="AB+">AB+</option>
+          <option value="AB-">AB-</option>
+          <option value="O+">O+</option>
+          <option value="O-">O-</option>
+        </select><br><br>
+
+        <label for="love-meter">How much do you love Srinivas?</label>
+        <input type="range" id="love-meter" name="love-meter" min="0" max="100"><br><br>
+
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+  </div>
+</body>
+
+</html>
