--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
       background-color: #f2f2f2;
       padding: 20px;
     }
+    
+    .form1-container {
+      width: 40%;
+      background-color: #f3f2f3;
+      padding: 30px;
+    }
 
     h1, h2, h3, h4, h5, h6 {
       color: #333;
@@ -142,12 +148,27 @@
           <option value="O+">O+</option>
           <option value="O-">O-</option>
         </select><br><br>
+        <input type="submit" value="Submit">
+      </form>
+      <div><br></br></div>
+    <div>  
+      <article>
+        <h2>Fans registration !!</h2>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required><br><br>
+
+        <label for="phone">Phone Number:</label>
+        <input type="tel" id="phone" name="phone" required><br><br>
+
+        <label for="img">Select image:</label>
+  	<input type="file" id="img" name="img" accept="image/*">
 
         <label for="love-meter">How much do you love Srinivas?</label>
         <input type="range" id="love-meter" name="love-meter" min="0" max="100"><br><br>
 
         <input type="submit" value="Submit">
-      </form>
+      </article>
+    </div>
     </div>
   </div>
 </body>
